sorted/examples/06-pattern-path.stderr
error: Error::Fmt should sort before Error::Io
  --> examples/06-pattern-path.rs:33:13
   |
33 |             Error::Fmt(e) => write!(f, "{}", e),
   |             ^^^^^^^^^^
